some of the optional tasks are done.